@@ -5,6 +5,7 @@ Revision 0.1.8
 - Fix to SEQUENCE and SET types to give them their private componentTypes
   collection (which is a NamedTypes object) so that they won't collide in
   a MT execution environment.
+- Missing ObjectDescriptor useful type added.
 - Fix to NamedType.__repr__() to work properly.
 - Fix to binary initializer support of Real object.
 
